@@ -16,7 +16,7 @@
    "prereqs" : {
       "configure" : {
          "recommends" : {
-            "ExtUtils::MakeMaker" : "7.04"
+            "ExtUtils::MakeMaker" : "7.00"
          },
          "requires" : {
             "ExtUtils::MakeMaker" : "0",
@@ -25,7 +25,7 @@
       },
       "develop" : {
          "recommends" : {
-            "Test::More" : "1.301001_097"
+            "Test::More" : "0.99"
          },
          "requires" : {
             "Dist::Zilla" : "5",
@@ -56,13 +56,13 @@
             "Dist::Zilla::Plugin::MetaTests" : "0",
             "Dist::Zilla::Plugin::MetaYAML" : "0",
             "Dist::Zilla::Plugin::MinimumPerl" : "0",
-            "Dist::Zilla::Plugin::Pod2Readme" : "0",
             "Dist::Zilla::Plugin::PodCoverageTests" : "0",
             "Dist::Zilla::Plugin::PodSyntaxTests" : "0",
             "Dist::Zilla::Plugin::PodWeaver" : "0",
             "Dist::Zilla::Plugin::Prereqs" : "0",
             "Dist::Zilla::Plugin::Prereqs::AuthorDeps" : "0",
             "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0",
+            "Dist::Zilla::Plugin::Prereqs::Upgrade" : "0",
             "Dist::Zilla::Plugin::Readme::Brief" : "0",
             "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0",
             "Dist::Zilla::Plugin::RewriteVersion::Sanitized" : "0",
@@ -92,6 +92,9 @@
          }
       },
       "runtime" : {
+         "recommends" : {
+            "Moose" : "2.000"
+         },
          "requires" : {
             "Dist::Zilla::File::FromCode" : "0",
             "Dist::Zilla::Role::FileGatherer" : "0",
@@ -115,8 +118,8 @@
       "test" : {
          "recommends" : {
             "CPAN::Meta" : "2.120900",
-            "ExtUtils::MakeMaker" : "7.04",
-            "Test::More" : "1.301001_097"
+            "ExtUtils::MakeMaker" : "7.00",
+            "Test::More" : "0.99"
          },
          "requires" : {
             "ExtUtils::MakeMaker" : "0",
@@ -277,6 +280,11 @@
             "class" : "Dist::Zilla::Plugin::Manifest",
             "name" : "@Author::KENTNL/Manifest",
             "version" : "5.031"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Author::KENTNL::TravisCI",
+            "name" : "@Author::KENTNL/Author::KENTNL::TravisCI",
+            "version" : "0.001001"
          },
          {
             "class" : "Dist::Zilla::Plugin::CopyFilesFromBuild",
@@ -713,33 +721,24 @@
             "version" : "0.026"
          },
          {
-            "class" : "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled",
+            "class" : "Dist::Zilla::Plugin::Prereqs::Upgrade",
             "config" : {
-               "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : {
-                  "applyto_map" : [
-                     "build.requires = build.recommends",
-                     "test.requires = test.recommends",
-                     "runtime.requires = runtime.recommends",
-                     "configure.requires = configure.recommends",
-                     "develop.requires = develop.recommends"
-                  ],
-                  "applyto_phase" : [
-                     "build",
-                     "test",
-                     "runtime",
-                     "configure",
-                     "develop"
-                  ],
-                  "modules" : [
-                     "ExtUtils::MakeMaker",
-                     "Test::More"
-                  ],
-                  "source_relation" : "requires",
-                  "target_relation" : "recommends"
+               "Dist::Zilla::Plugin::Prereqs::Upgrade" : {
+                  "modules" : {
+                     "Dist::Zila::Plugin::MetaProvides::Package" : "2.000000",
+                     "Dist::Zilla" : "5",
+                     "ExtUtils::MakeMaker" : "7.00",
+                     "File::ShareDir::Install" : "0.10",
+                     "Moo" : "1.000008",
+                     "Moose" : "2.000",
+                     "Path::Tiny" : "0.058",
+                     "Test::File::ShareDir" : "1.000000",
+                     "Test::More" : "0.99"
+                  }
                }
             },
-            "name" : "@Author::KENTNL/Prereqs::Recommend::MatchInstalled",
-            "version" : "0.003001"
+            "name" : "@Author::KENTNL/Prereqs::Upgrade",
+            "version" : "0.001000"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled",
@@ -772,11 +771,6 @@
             },
             "name" : "@Author::KENTNL/::Role::BundleDeps",
             "version" : "5.031"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Author::KENTNL::TravisCI",
-            "name" : "Author::KENTNL::TravisCI",
-            "version" : "0.001001"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs",
