@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002003
+ [Changed / test recommends]
+ - Test::More 1.001014 → 1.301001_097
 
 0.002002 2015-01-10T08:32:27Z
 
