@@ -31,13 +31,13 @@
       "Dist::Zilla::Plugin::MetaTests" : "5.031",
       "Dist::Zilla::Plugin::MetaYAML" : "5.031",
       "Dist::Zilla::Plugin::MinimumPerl" : "1.006",
-      "Dist::Zilla::Plugin::Pod2Readme" : "0.001",
       "Dist::Zilla::Plugin::PodCoverageTests" : "5.031",
       "Dist::Zilla::Plugin::PodSyntaxTests" : "5.031",
       "Dist::Zilla::Plugin::PodWeaver" : "4.006",
       "Dist::Zilla::Plugin::Prereqs" : "5.031",
       "Dist::Zilla::Plugin::Prereqs::AuthorDeps" : "0.004",
       "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.003001",
+      "Dist::Zilla::Plugin::Prereqs::Upgrade" : "0.001000",
       "Dist::Zilla::Plugin::Readme::Brief" : "0.002003",
       "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.150250",
       "Dist::Zilla::Plugin::RewriteVersion::Sanitized" : "0.001005",
